--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   },
   "dependencies": {
     "d3": "^7.8.5",
+    "d3-selection": "^3.0.0",
     "d3-soccer": "^0.1.0",
+    "i": "^0.3.7",
+    "npm": "^9.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
@@ -31,6 +34,7 @@
     "@types/d3-format": "^3.0.1",
     "@types/d3-geo": "^3.0.3",
     "@types/d3-interpolate": "^3.0.1",
+    "@types/d3-selection": "^3.0.5",
     "@types/dsv": "^0.0.30",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
